[project]
name = "algo-predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pykalshi[dataframe]>=0.3.6",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
kalshi = "src.main:main"
underdog = "src.underdog:main"
draftkings = "src.draftkings:main"
pinnacle = "src.pinnacle:main"
trade = "src.trade:main"
compare = "src.compare:main"
